# CodeCheck

./: .gitignore  README.md  index.html  main.js  main.py  misc.py  model.ipynb  model.py  pyproject.toml  requirements.txt  run.sh  schema.py  style.less  tester.py
DataSet/: progress.md
DataSet/Problems/: problems.md  progress.md
DataSet/Tests/Codeforces/melons/: text.txt
DataSet/Tests/Codeforces/melons/en/: name.txt  solution.py  test.csv
DataSet/Tests/Codeforces/melons_en/: test.csv  text.txt
DataSet/Tests/Pavlova/: test_gen.py
DataSet/Tests/Pavlova/bool/armstrong/: solution.py  test.csv  text.md
DataSet/Tests/Pavlova/bool/has_both/: solution.py  test.csv  text.md
DataSet/Tests/Pavlova/bool/has_even/: solution.py  test.csv  text.md
DataSet/Tests/Pavlova/bool/has_odd_min/: solution.py  test.csv  text.md
DataSet/Tests/Pavlova/bool/has_three/: solution.py  test.csv  text.md
DataSet/Tests/Pavlova/bool/sum_odd/: solution.py  test.csv  text.md
DataSet/Tests/Pavlova/eval/big_dumb/: solution.py  test.csv  text.md
WebApp/: codecheck.conf  gunicorn.service  nginx.conf
WebApp/static/: index.html  style.less  test.less  test.py  text.html
WebApp/static/css/: style.css
WebApp/static/js/: main.js  main_v2.js  test.js  tester.js
codecheck/: cli.py  endpoint.py  misc.py  model.py  schema.py  tester.py
codecheck/api/: endpoint.py  schema.py
codecheck/dataset/: cli.py  problems.py  tester.py
codecheck/model/: model.py
current ver. of project/: index.html  test.less
current ver. of project/css/: style.css
current ver. of project/js/: main.js
js/: main.js
project/: index.html
project/css/: style.css
static/: index.html
(+28 files in other folders)
