[project]
name = "codecheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contexttimer>=0.3.3",
    "fastapi[standard]>=0.115.12",
    "huggingface-hub>=0.29.3",
    "llama-cpp-python>=0.3.8",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
]
