[project]
dependencies = [
  "fastapi[standard]>=0.115.12",
  "contexttimer>=0.3.3",
  "huggingface-hub>=0.29.3",
  "loguru>=0.7.3",
  "pydantic>=2.10.6",
  "ollama>=0.4.7",
]
description = "Add your description here"
name = "codecheck"
readme = "README.md"
requires-python = "<4.0,>=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
